WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281069
[Media in GPU Process] Fix build with release log disabled
https://bugs.webkit.org/show_bug.cgi?id=281069
Summary
[Media in GPU Process] Fix build with release log disabled
Olivier Blin
Reported
2024-10-08 10:55:17 PDT
276761@main
introduced stall logs in MediaSourcePrivateRemote::setMediaPlayerReadyState(). This triggers unused-but-set-variable errors when building with RELEASE_LOG_DISABLED.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2024-10-08 11:02:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34850
EWS
Comment 2
2024-10-14 08:30:34 PDT
Committed
285123@main
(9bb0d5aa3d5a): <
https://commits.webkit.org/285123@main
> Reviewed commits have been landed. Closing PR #34850 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-14 08:31:16 PDT
<
rdar://problem/137877585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug