[Media in GPU Process] Fix build with release log disabled https://bugs.webkit.org/show_bug.cgi?id=281069

Reviewed by Michael Catanzaro.

Stall logs in MediaSourcePrivateRemote::setMediaPlayerReadyState()
have been added in 276761@main. This triggers unused-but-set-variable
errors when building with RELEASE_LOG_DISABLED.

* Source/WebKit/WebProcess/GPU/media/MediaSourcePrivateRemote.cpp:
(WebKit::MediaSourcePrivateRemote::setMediaPlayerReadyState):

Canonical link: https://commits.webkit.org/285123@main